# basic_algorithms

./: CMakeLists.txt  README.md  bayes.cpp  file_reader.cpp  file_reader.h  k-means.cpp  knn.cpp  perceptron.cpp
bayes/: data_testing.csv  data_training.csv
k-means/: data_set.csv
knn/: data_testing.csv  data_training.csv
perceptron/: data_testing.csv  data_training.csv
